--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "vue": "^2.5.2",
+    "vue-axios": "^2.1.4",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
